[tool.poetry]
name = "ror_save_editor"
version = "1.0"
description = "Risk of Rains Returns save file editor"
authors = ["Markell"]
license = "GPL-3.0"
repository = 'https://github.com/markell/ror_save_editor'
readme = "README.md"
#virtualenvs.in-project = true

[tool.poetry.dependencies]
python = ">=3.8.0,<3.13.0"
beaupy="3.8.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=6.9.0"

[tool.poetry.scripts]
build = "ror_save_editor.installer:install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
